--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,15 +69,7 @@ body {
   body {
     @apply bg-background text-foreground;
   }
-}
-
-
-
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
+  svg {
+    display: inline !important;
   }
 }
